fix: reduce z-index for overlay blocks

--- a/assets/src/css/godam-player.scss
+++ b/assets/src/css/godam-player.scss
@@ -1192,7 +1192,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 100;
+  z-index: 5;
   opacity: 1;
   transition: opacity 0.3s ease;
 
